--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 html {
     height: 1000px;
+    box-sizing: border-box;
 }
 
 /* COMMON */
@@ -8,19 +9,22 @@ html {
 body {
     height: 1000px;
 }
-#web-grid {
-    height: 75%;
-}
+
+
 
 #navigation-bar {
-    background-color: #000;
-    position: relative;
+    background-color: rgba(0,0,0,0.8);
     height: 100%;
     font-size: 15px;
+    overflow: hidden;
+    position: fixed;
+    
 }
+
 #navigation-bar .main-nav-row {
     padding-left: 4px;
 }
+
 #navigation-bar .main-nav {
     padding-top: 10%;
 }
@@ -31,52 +35,74 @@ body {
     color: #000;
     position: relative;
 }
+
 #navigation-bar .nav-item {
     padding-top: 7px;
     padding-bottom: 7px;
-    color: rgba(255,255,255,0.6);
+    color: rgba(255, 255, 255, 0.6);
     font-weight: 500;
 }
+
 #navigation-bar .play-lists .nav-item {
     font-weight: normal;
 }
+
 #navigation-bar .play-lists .nav-link {
     text-decoration: none;
 }
+
 #navigation-bar .sub-nav .nav-link,
 #navigation-bar .main-nav .nav-link {
     text-decoration: none;
-    color: rgba(255,255,255,0.6);
+    color: rgba(255, 255, 255, 0.6);
     display: inline-block;
 }
+
 #navigation-bar .nav-item :hover,
 #navigation-bar .nav-link :hover {
     color: #fff;
 }
-#navigation-bar .sub-nav .nav-icon
-#navigation-bar .main-nav .nav-icon {
+
+#navigation-bar .sub-nav .nav-icon #navigation-bar .main-nav .nav-icon {
     color: #000;
     line-height: 20px;
     display: inline-block;
 }
+
 #navigation-bar .sub-nav-row {
-    border-top: solid rgba(255,255,255,0.5);
-   
+    border-top: solid rgba(255, 255, 255, 0.5);
+
 }
+
 #navigation-bar .play-lists {
     padding-left: 25px;
     list-style-type: none;
 }
+
 /* CONTENT_SECTION */
 #content-section {
-    background-color: #fff;
+    background-color: #ccc;
     height: 100%;
-    
+
 }
 
+/* PLAY BAR */
 #play-bar {
     position: fixed;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    height: 100px;
+    bottom: 0;
+    background-color: #000;
+    z-index: 3;
+}
+
+#play-bar .play-btn {
+    color: #fff;
+
+    line-height: 30px;
+    font-size: 36px;
+}
+
+#play-bar .row {
+    width: 100%;
 }
